[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/theBook.gd" type="Script" id=1]
[ext_resource path="res://entities/ItemObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/FUTENE.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/Entities/jam3alchemybook.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 106.648

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 89, 46 )

[node name="Book" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="booklayer" type="CanvasLayer" parent="."]

[node name="book" type="MarginContainer" parent="booklayer"]
visible = false
margin_right = 1612.0
margin_bottom = 900.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="booklayer/book"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1412.0
margin_bottom = 800.0
color = Color( 0.92, 0.84272, 0.7268, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="booklayer/book"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1412.0
margin_bottom = 800.0

[node name="left" type="VBoxContainer" parent="booklayer/book/HBoxContainer"]
margin_right = 604.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 0 )

[node name="name" type="Label" parent="booklayer/book/HBoxContainer/left"]
margin_right = 604.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="booklayer/book/HBoxContainer/left"]
margin_top = 54.0
margin_right = 604.0
margin_bottom = 304.0

[node name="Panel" type="Panel" parent="booklayer/book/HBoxContainer/left/HBoxContainer"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )

[node name="Item" parent="booklayer/book/HBoxContainer/left/HBoxContainer/Panel" instance=ExtResource( 2 )]
visible = false
position = Vector2( 125, 125 )

[node name="details" type="Label" parent="booklayer/book/HBoxContainer/left/HBoxContainer"]
margin_left = 254.0
margin_right = 604.0
margin_bottom = 250.0
rect_min_size = Vector2( 350, 250 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )

[node name="descr" type="Label" parent="booklayer/book/HBoxContainer/left"]
margin_top = 308.0
margin_right = 604.0
margin_bottom = 342.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="right" type="VBoxContainer" parent="booklayer/book/HBoxContainer"]
margin_left = 608.0
margin_right = 1212.0
margin_bottom = 700.0
rect_min_size = Vector2( 600, 0 )

[node name="name" type="Label" parent="booklayer/book/HBoxContainer/right"]
margin_right = 604.0
margin_bottom = 50.0
rect_min_size = Vector2( 600, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="booklayer/book/HBoxContainer/right"]
margin_top = 54.0
margin_right = 604.0
margin_bottom = 304.0

[node name="Panel" type="Panel" parent="booklayer/book/HBoxContainer/right/HBoxContainer"]
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )

[node name="Item" parent="booklayer/book/HBoxContainer/right/HBoxContainer/Panel" instance=ExtResource( 2 )]
visible = false
position = Vector2( 125, 125 )

[node name="details" type="Label" parent="booklayer/book/HBoxContainer/right/HBoxContainer"]
margin_left = 254.0
margin_right = 604.0
margin_bottom = 250.0
rect_min_size = Vector2( 350, 250 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )

[node name="descr" type="Label" parent="booklayer/book/HBoxContainer/right"]
margin_top = 308.0
margin_right = 604.0
margin_bottom = 342.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="PageCount" type="RichTextLabel" parent="booklayer"]
visible = false
margin_left = 1270.03
margin_top = 715.514
margin_right = 1340.03
margin_bottom = 763.514
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 9 )
text = "Sneed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="booklayer"]
visible = false
margin_left = 1212.17
margin_top = 725.532
margin_right = 1402.17
margin_bottom = 794.532
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Close"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tip" type="Label" parent="booklayer"]
visible = false
margin_left = 205.536
margin_top = 773.408
margin_right = 357.536
margin_bottom = 796.408
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Space to advance."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_Book_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Book_area_exited"]
[connection signal="pressed" from="booklayer/Button" to="." method="_on_Button_pressed"]
